--- a/front/client/package.json
+++ b/front/client/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-spring/web": "^9.7.5",
     "@supabase/supabase-js": "^2.47.16",
     "animejs": "^3.2.2",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.5",
     "lenis": "^1.1.18",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/animejs": "^3.1.12",
+    "@types/date-fns": "^2.5.3",
     "@types/gsap": "^1.20.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
