--- a/BACK/tsconfig.json
+++ b/BACK/tsconfig.json
@@ -2,16 +2,12 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "Node",
+    "outDir": "./dist",  
+    "rootDir": "./src",    
+    "esModuleInterop": true,   
+    "strict": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts", "src/app.ts"],   
   "exclude": ["node_modules"]
 }
